--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OnlineShop"
         android:usesCleartextTraffic="true">
-        <activity
-            android:name=".screen.MainActivity"></activity>
+        <activity android:name=".screen.sign.LoginActivity"></activity>
+        <activity android:name=".screen.MainActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -37,17 +37,17 @@
             android:label="@string/title_activity_maps" />
         <activity android:name=".screen.makeorder.MakeOrderActivity" />
         <activity android:name=".screen.productdetail.ProductDetailActivity" />
-        <activity android:name=".screen.SplashActivity">
+        <activity android:name=".screen.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service
-            android:name=".service.AppFirebaseMessagingService">
+
+        <service android:name=".service.AppFirebaseMessagingService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
     </application>
